lib/fixtures/errors/4020.ts
export const payload = {
  description: "Balance depleted",
  url: "/v1/postcodes/W2 2LG?api_key=<VALID_API_KEY>",
  query: {
    api_key: "<VALID_API_KEY>"
  },
  headers: {},
  httpStatus: 402,
  body: {
    code: 4020,
    message: "Key balance depleted. For more information see http://ideal-postcodes.co.uk/documentation/response-codes#4020"
  }
}
